--- a/hw2/mytable.html
+++ b/hw2/mytable.html
@@ -5,7 +5,10 @@
 <style>
    table1,tr ,td{
          border:1px solid black;
+   
    }
+   
+   
 </style>
 <body>
     <table id="table1">
@@ -52,7 +55,7 @@
     </table>
 
 
-
+<!--Exelent!-->
 
 
 
