--- a/hw3/menu.html
+++ b/hw3/menu.html
@@ -82,7 +82,7 @@
          <center>  <button>BUY</button></center>
 
      </div></center>
-     <p id="clickonme"><center><a href="file:///C:/Users/elle.d/Desktop/myproject/omer-naim/hw3/tnx.html">"click on me"</a></center></p>
+     <p id="clickonme"><center><a href="tnx.html">"click on me"</a></center></p>
     
 
 </body>
