--- a/hw3/menu.html
+++ b/hw3/menu.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="menu.css">
+    <link rel="shortcut icon" href="logo.png">
     <title>mymenu!!</title>
   
 </head>
